[Finishes #183753551] update pet search page

--- a/pet.html
+++ b/pet.html
@@ -12,21 +12,22 @@
 <body>
   <h1>pets for life</h1>
   <div class="nav">
-    <a class="active" href="index.html">home</a>
+    <a href="index.html">home</a>
     <a href="pet.html">pets</a>
     
   </div>
   <div class="main">
-    <h2>welcome!</h2>
+    <h2>Search For Pets:</h2>
     <p>content here</p>
     <br><br>
 
-   
+    <form>
+      <legend> Find A Cat Near You! </legend>
+      <label for="zip">Zip</label>
+      <input type="text" name="zip" id="zip">
+      <input type="submit" id="submitZip">
+    </form>
     
-
-
-
-
 
   </div>
   
