--- a/pet.html
+++ b/pet.html
@@ -9,12 +9,15 @@
   <title>pet website</title>
 </head>
 
-<body>
+<body id="pet">
   <h1>pets for life</h1>
   <div class="nav">
     <a href="index.html">home</a>
     <a href="pet.html">pets</a>
-    
+    <a href="petCare.html">pet care</a>
+    <a href ="supplies.html">supplies</a>
+    <a href="aboutUs.html">about us</a>
+
   </div>
   <div class="main">
     <h2>Search For Pets:</h2>
@@ -27,7 +30,10 @@
       <input type="text" name="zip" id="zip">
       <input type="submit" id="submitZip">
     </form>
-    
+
+
+
+
 
   </div>
   
