add supply links and update css

--- a/public/supplies.html
+++ b/public/supplies.html
@@ -23,8 +23,16 @@
     <h2>Get supplies here!</h2>
     <p>content here</p>
     <br><br>
-
-    <!-- I was thinking of linking to Purina, chewy and maybe petco as places to get supplies.  -->
+    <p>Below you will see a list of our favorite pet supply websites.</p>
+    <br><br>
+    <ul id="links">
+      <li><a href="https://www.purina.com/">Purina</a></li><br>
+      <li><a href="https://www.chewy.com/">Chewy</a></li><br>
+      <li><a href="https://www.petflow.com/">PetFlow</a></li><br>
+      <li><a href="https://www.petsuppliesplus.com/online-ordering">Pet Supplies Plus</a></li><br>
+      <li><a href="https://www.petco.com/shop/en/petcostore">Petco</a></li><br>
+      <li><a href="https://www.entirelypets.com/suppliesplus.html">EntirelyPets</a></li>
+    </ul>
 
    
 
