[Finishes #183753151] add links to petcare.html

--- a/public/petCare.html
+++ b/public/petCare.html
@@ -21,15 +21,16 @@
   </div>
   <div class="main">
     <h2>Pet Care Information!</h2>
-    <p>content here</p>
+    <p>Please visit these links to answer all of your pet care questions.</p>
     <br><br>
-
-   
-    
-
-
-
-
+    <ul>
+      <li><a href="https://www.avma.org/resources-tools/pet-owners/petcare">American Veterinary Medical Association</a></li><br>
+      <li><a href="https://www.aspca.org/pet-care/general-pet-care">ASPCA</a></li><br>
+      <li><a href="https://pets.webmd.com/default.htm">Fetch By WebMD</a></li><br>
+      <li><a href="https://www.rspca.org.uk/adviceandwelfare/pets">RSPCA</a></li><br>
+      <li><a href="https://www.wikihow.com/Take-Care-of-Your-Pet">WikiHow - How to Take Care of Your Pet</a></li><br>
+      <li><a href="https://openmd.com/directory/veterinary">OpenMD.com</a></li><br>
+    </ul>
 
   </div>
   
