[Finishes #183868392] remove br tags

--- a/public/pet.html
+++ b/public/pet.html
@@ -5,8 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <!-- <script src="public/pets.js"></script> -->
-  <title>pet website</title>
+  <title>Pets For Life</title>
 </head>
 
 <body id="pet">
@@ -21,8 +20,6 @@
   </div>
   <div class="main">
     <h2>Search For Pets:</h2>
-  
-    <br><br>
 
     <form id="searchform"> 
       <div>
