--- a/public/supplies.html
+++ b/public/supplies.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <script src="js/pets.js"></script>
-  <title>pet website</title>
+  
+  <title>Pets For Life</title>
 </head>
 
 <body id="supply">
@@ -22,9 +22,8 @@
   <div class="main">
     <h2>Get supplies here!</h2>
     
-    <br><br>
     <p>Below you will see a list of our favorite pet supply websites.</p>
-    <br><br>
+    
     <ul id="links">
       <li><a href="https://www.purina.com/">Purina</a></li><br>
       <li><a href="https://www.chewy.com/">Chewy</a></li><br>
@@ -33,9 +32,6 @@
       <li><a href="https://www.petco.com/shop/en/petcostore">Petco</a></li><br>
       <li><a href="https://www.entirelypets.com/suppliesplus.html">EntirelyPets</a></li>
     </ul>
-
-   
-
 
   </div>
   
