--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <script src="js/pets.js"></script>
-  <title>pet website</title>
+
+  <title>Pets For Life</title>
 </head>
 
 <body>
@@ -22,15 +22,6 @@
   <div class="main">
     <h2>Pets For Life</h2>
     <p>This site is to help animals find their forever home and help people find supplies and care for their new pet.</p>
-    <br><br>
-
-
-
-   
-    
-
-
-
 
 
   </div>
