--- a/public/petCare.html
+++ b/public/petCare.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <script src="js/pets.js"></script>
-  <title>pet website</title>
+  
+  <title>Pets For Life</title>
 </head>
 
 <body id="petCare">
@@ -22,7 +22,6 @@
   <div class="main">
     <h2>Pet Care Information!</h2>
     <p>Please visit these links to answer all of your pet care questions.</p>
-    <br><br>
     <ul>
       <li><a href="https://www.avma.org/resources-tools/pet-owners/petcare">American Veterinary Medical Association</a></li><br>
       <li><a href="https://www.aspca.org/pet-care/general-pet-care">ASPCA</a></li><br>
