--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-
+  <script src="js/search.js"></script>
   <title>Pets For Life</title>
 </head>
 
@@ -22,6 +22,20 @@
   <div class="main">
     <h2>Pets For Life</h2>
     <p>This site is to help animals find their forever home and help people find supplies and care for their new pet.</p>
+    <p>For any questions, comments, or concerns, please fill out this form.</p>
+    <form action="https://formsubmit.co/09940a211bac00f46de40dfa1d7889a7" method="post">
+      
+      <label>First Name:</label>
+      <input type="text" id="firstname" size="50"><br>
+      <label>Last Name:</label>
+      <input type="text" id="lastname" size="50"><br>
+      <label>Email Address:</label>
+      <input type="email" id="email" size="50"><br>
+      <p>Enter your message here:</p>
+      <textarea rows="4" cols="50" id="message"></textarea><br>
+      <input type="submit" value="Send Message" id="sendmessage" onclick="sendMessage()">
+    </form>
+    <p id="confirm"></p>
 
 
   </div>
