--- a/public/pet.html
+++ b/public/pet.html
@@ -9,12 +9,12 @@
 </head>
 
 <body id="pet">
-  <h1>pets for life</h1>
+  <h1>Pets For Life</h1>
   <div class="nav">
     <a href="index.html">home</a>
     <a href="pet.html">pets</a>
     <a href="petCare.html">pet care</a>
-    <a href ="supplies.html">supplies</a>
+    <a href="supplies.html">supplies</a>
     <a href="aboutUs.html">about us</a>
 
   </div>
@@ -30,7 +30,7 @@
           <option value="bird">Bird</option>
           <option value="farm">Farm</option>
         </select>
-        <input type="text" id="zip" placeholder="Enter your zipcode">
+        <input required type="text" id="zip" placeholder="Enter your zipcode">
         <input type="submit" value="find">
       </div>
     </form>
@@ -39,7 +39,6 @@
 
   </div>
   <script  src="js/search.js"></script>
-
 
 </body>
 <footer class="footer">
