--- a/public/petCare.html
+++ b/public/petCare.html
@@ -5,12 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  
   <title>Pets For Life</title>
 </head>
 
 <body id="petCare">
-  <h1>pets for life</h1>
+  <h1>Pets For Life</h1>
   <div class="nav">
     <a href="index.html">home</a>
     <a href="pet.html">pets</a>
