--- a/public/template.html
+++ b/public/template.html
@@ -5,16 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <script src="js/pets.js"></script>
-  <title>pet website</title>
+  <title>Pets For Life</title>
 </head>
 
 <body>
-  <h1>pets for life</h1>
+  <h1>Pets For Life</h1>
   <div class="nav">
-    <a class="active" href="index.html">home</a>
+    <a href="index.html">home</a>
     <a href="pet.html">pets</a>
-    
+    <a href="petCare.html">pet care</a>
+    <a href="supplies.html">supplies</a>
+    <a href="aboutUs.html">about us</a>
   </div>
   <div class="main">
     <h2>welcome!</h2>
