[Finishes #183915437] updated farm animals to barnyard

--- a/public/pet.html
+++ b/public/pet.html
@@ -28,7 +28,7 @@
           <option value="cat">Cat</option>
           <option value="dog">Dog</option>
           <option value="bird">Bird</option>
-          <option value="farm">Farm</option>
+          <option value="barnyard">Barnyard</option>
         </select>
         <input required type="text" id="zip" placeholder="Enter your zipcode">
         <input type="submit" value="find">
