--- a/public/pet.html
+++ b/public/pet.html
@@ -29,6 +29,10 @@
           <option value="dog">Dog</option>
           <option value="bird">Bird</option>
           <option value="barnyard">Barnyard</option>
+          <option value="rabbit">Rabbit</option>
+          <option value="horse">Horse</option>
+          <option value="small-furry">Small-Furry</option>
+          <option value="scales-fins-other">Scales-Fins-Other</option>
         </select>
         <input required type="text" id="zip" placeholder="Enter your zipcode">
         <input type="submit" value="find">
