[Delivers #183915540] featured pet on home page, update css js

--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,13 @@
   </div>
   <div class="main">
     <h2>Welcome to Pets For Life</h2>
-    <p></p>
+    <div id="featuredpet" class="featuredpet">
+      <h2 class="featuredtitle">Featured Pet</h2>
+      <div id="random"></div>
+    </div>
 
   </div>
-  
+  <script src="js/index.js"></script>
 </body>
 <footer class="footer">
   <br><br>
