--- a/public/supplies.html
+++ b/public/supplies.html
@@ -23,16 +23,11 @@
     <h2>Get supplies here!</h2>
     
     <p>Below you will see a list of our favorite pet supply websites.</p>
-    
-    <ul id="links">
-      <li><a href="https://www.purina.com/">Purina</a></li><br>
-      <li><a href="https://www.chewy.com/">Chewy</a></li><br>
-      <li><a href="https://www.petflow.com/">PetFlow</a></li><br>
-      <li><a href="https://www.petsuppliesplus.com/online-ordering">Pet Supplies Plus</a></li><br>
-      <li><a href="https://www.petco.com/shop/en/petcostore">Petco</a></li><br>
-      <li><a href="https://www.entirelypets.com/suppliesplus.html">EntirelyPets</a></li>
-    </ul> -->
-<!-- under construction
+
+<script src="js/petSupply.js"></script>
+
+
+
 <form id="supplyForm">
 <div>
   <label for="animal">Animal</label>
@@ -46,85 +41,9 @@
     <option value="fish">Fish</option>
     <option value="smallPet">Small Pets</option>
   </select>
-  <input type="submit" value="find">
-    </div>
+<button type="button" onclick="supplyLinks()" value="find">Find Supply</button>    </div>
 </form>
 <div id="output"></div>
-
-<script src="js/petSupply.js"></script> -->
-
-
-<p>Supplies for Dogs</p>
-<ul id="dogLinks">
-  <li><a href="https://www.purina.com/dogs">Purina</a></li><br></br>
-  <li><a href="https://www.chewy.com/b/dog-288">Chewy</a></li><br></br>
-  <li><a href="https://www.petflow.com/dog">PetFlow</a></li><br></br>
-  <li><a href="https://www.petsuppliesplus.com/">Pet Supplies Plus</a></li><br></br>
-  <li><a href="https://www.petco.com/shop/en/petcostore/category/dog">Petco</a></li><br></br>
-  <li><a href="https://www.entirelypets.com/dogsupplies.html">EntirelyPets</a></li>
-  </ul>
-
-<p>Supplies for Cats</p>
-<ul id="catLinks">
-  <li><a href="https://www.purina.com/cats">Purina</a></li><br></br>
-  <li><a href="https://www.chewy.com/b/cat-325">Chewy</a></li><br></br>
-  <li><a href="https://www.petflow.com/cat">PetFlow</a></li><br></br>
-  <li><a href="https://www.petsuppliesplus.com/">Pet Supplies Plus</a></li><br></br>
-  <li><a href="https://www.petco.com/shop/en/petcostore/category/cat">Petco</a></li><br></br>
-  <li><a href="https://www.entirelypets.com/catsupplies.html">EntirelyPets</a></li>
-  </ul>
-  <p>Supplies for Birds</p>
-  <ul id="birdLinks">
-    <li><a href="https://www.tractorsupply.com/tsc/catalog/pet-bird">Tractor Supply</a></li><br></br>
-    <li><a href="https://www.chewy.com/b/bird-941">Chewy</a></li><br></br>
-    <li><a href="https://www.petflow.com/bird">PetFlow</a></li><br></br>
-    <li><a href="https://www.petsuppliesplus.com/">Pet Supplies Plus</a></li><br></br>
-    <li><a href="https://www.petco.com/shop/en/petcostore/category/bird">Petco</a></li><br></br>
-    <li><a href="https://www.entirelypets.com/birdproducts.html">EntirelyPets</a></li>
-    </ul>
-<p>Supplies for Barnyard Animals</p>
-<ul id="farmLinks">
-  <li><a href="https://www.tractorsupply.com/tsc/catalog/poultry-livestock">Tractor Supply</a></li><br></br>
-  <li><a href="https://www.chewy.com/b/farm-animal-8403">Chewy</a></li><br></br>
-  <li><a href="https://www.farmtek.com/farm/supplies/cat1;;ft_livestock_supplies.html">Farm Tek</a></li><br></br>
-  <li><a href="https://www.farmandfleet.com/farm-and-livestock/">Farm and Fleet</a></li><br></br>
-  <li><a href="https://www.petco.com/shop/en/petcostore/category/farm-and-feed">Petco</a></li><br></br>
-  </ul>
-  <p>Supplies for Horses</p>
-  <ul id="horseLinks">
-    <li><a href="https://www.tractorsupply.com/tsc/cms/horse-essentials">Tractor Supply</a></li><br></br>
-    <li><a href="https://www.chewy.com/b/horse-1663">Chewy</a></li><br></br>
-    <li><a href="https://www.entirelypets.com/horseproducts.html">Entirerly Pets</a></li><br></br>
-    <li><a href="https://www.farmandfleet.com/horse-care-and-tack/">Farm and Fleet</a></li><br></br>
-    <li><a href="https://www.petco.com/shop/en/petcostore/category/farm-and-feed/horse-shop">Petco</a></li><br></br>
-    </ul>
-      <p>Supplies for Fish</p>
-      <ul id="fishLinks">
-        <li><a href="https://www.tractorsupply.com/tsc/catalog/pet-fish">Tractor Supply</a></li><br></br>
-        <li><a href="https://www.chewy.com/b/fish-885">Chewy</a></li><br></br>
-        <li><a href="https://www.petflow.com/fish">PetFlow</a></li><br></br>
-        <li><a href="https://www.petsuppliesplus.com/">Pet Supplies Plus</a></li><br></br>
-        <li><a href="https://www.petco.com/shop/en/petcostore/category/fish">Petco</a></li><br></br>
-        <li><a href="https://www.entirelypets.com/aquarium-supplies.html">EntirelyPets</a></li>
-        </ul>
-<p>Supplies for Reptiles</p>
-    <ul id="reptileLinks">
-      <li><a href="https://www.tractorsupply.com/tsc/catalog/reptile">Tractor Supply</a></li><br></br>
-      <li><a href="https://www.chewy.com/b/reptile-1025">Chewy</a></li><br></br>
-      <li><a href="https://www.petflow.com/reptile">PetFlow</a></li><br></br>
-      <li><a href="https://www.petsuppliesplus.com/">Pet Supplies Plus</a></li><br></br>
-      <li><a href="https://www.petco.com/shop/en/petcostore/category/reptile">Petco</a></li><br></br>
-      <li><a href="https://www.entirelypets.com/repprod.html">EntirelyPets</a></li>
-      </ul>
-      <p>Supplies for Small Pets</p>
-      <ul id="smallPetLinks">
-        <li><a href="https://www.tractorsupply.com/tsc/catalog/small-pet">Tractor Supply</a></li><br></br>
-        <li><a href="https://www.chewy.com/b/small-pet-977">Chewy</a></li><br></br>
-        <li><a href="https://www.petflow.com/small-pet">PetFlow</a></li><br></br>
-        <li><a href="https://www.petsuppliesplus.com/">Pet Supplies Plus</a></li><br></br>
-        <li><a href="https://www.petco.com/shop/en/petcostore/category/small-animal">Petco</a></li><br></br>
-        <li><a href="https://www.entirelypets.com/birandotpet.html">EntirelyPets</a></li>
-        </ul>
 
 
 </body>
