[Finishes #183868897] add new pet owner checklists

--- a/public/supplies.html
+++ b/public/supplies.html
@@ -37,8 +37,9 @@
     <option value="farm">Farm</option>
     <option value="reptile">Reptile</option>
     <option value="horse">Horse</option>
-    <option value="fish">Fish</option>
+    <!-- <option value="fish">Fish</option> -->
     <option value="smallPet">Small Pets</option>
+    <option value="rabbit">Rabbit</option>
   </select>
 <button type="button" onclick="supplyLinks()" value="find">Find Supply</button>    </div>
 </form>
