[Finishes #183974971] added feedback for no search results

--- a/public/supplies.html
+++ b/public/supplies.html
@@ -37,7 +37,7 @@
     <option value="farm">Farm</option>
     <option value="reptile">Reptile</option>
     <option value="horse">Horse</option>
-    <!-- <option value="fish">Fish</option> -->
+    <option value="fish">Fish</option>
     <option value="smallPet">Small Pets</option>
     <option value="rabbit">Rabbit</option>
   </select>
