[Finishes #183869340] add images to website

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     
   </div>
   <div class="main">
+    <img class="navimg" src="images/stockimgdog.jpg">
     <h2>Welcome to Pets For Life</h2>
     <div id="featuredpet" class="featuredpet">
       <h2 class="featuredtitle">Featured Pet</h2>
