--- a/public/pet.html
+++ b/public/pet.html
@@ -19,6 +19,7 @@
 
   </div>
   <div class="main">
+    <img class="navimg" src="images/stockimgcat.jpg">
     <h2>Search For Pets:</h2>
 
     <form id="searchform"> 
