--- a/public/petCare.html
+++ b/public/petCare.html
@@ -19,6 +19,7 @@
     
   </div>
   <div class="main">
+    <img class="navimg" src="images/stockimgpiggoat.jpg">
     <h2>Pet Care Information!</h2>
     <p>Please visit these links to answer all of your pet care questions.</p>
 
