--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -20,6 +20,7 @@
     
   </div>
   <div class="main">
+    <img class="navimg" src="images/stockimghorse.jpg">
     <h2>Pets For Life</h2>
     <p>This site is to help animals find their forever home and help people find supplies and care for their new pet.</p>
     <p>For any questions, comments, or concerns, please fill out this form.</p>
