--- a/public/supplies.html
+++ b/public/supplies.html
@@ -19,6 +19,7 @@
 
   </div>
   <div class="main">
+    <img class="navimg" src="images/stockimgbird.jpg">
     <h2>Get supplies here!</h2>
     
     <p>Below you will see a list of our favorite pet supply websites.</p>
