updated css and footer added logo

--- a/public/pet.html
+++ b/public/pet.html
@@ -9,7 +9,7 @@
 </head>
 
 <body id="pet">
-  <h1>Pets For Life</h1>
+  <img class="logoImg">
   <div class="nav">
     <a href="index.html">home</a>
     <a href="pet.html">pets</a>
@@ -50,8 +50,8 @@
 <footer class="footer">
   <br><br>
   <p><small>contact us</small></p>
-  <small><a href="mailto:kcooper11@student.cvtc.edu">kat cooper</a></small><br>
-  <small><a href="mailto:colliernw@gmail.com">nicholas collier</a></small>
+  <small><a href="mailto:kcooper11@student.cvtc.edu">Kat Cooper</a></small><br>
+  <small><a href="mailto:colliernw@gmail.com">Nicholas Collier</a></small>
 </footer>
 
 </html>
