--- a/public/petCare.html
+++ b/public/petCare.html
@@ -9,15 +9,16 @@
 </head>
 
 <body id="petCare">
-  <h1>Pets For Life</h1>
-  <div class="nav">
+     <img class="logoImg">
+   <div class="nav">
     <a href="index.html">home</a>
     <a href="pet.html">pets</a>
     <a href="petCare.html">pet care</a>
     <a href="supplies.html">supplies</a>
-    <a href="aboutUs.html">about us</a>
-    
+    <a href="aboutUs.html">about us</a> 
   </div>
+ 
+
   <div class="main">
     <img class="navimg" src="images/stockimgpiggoat.jpg">
     <h2>Pet Care Information!</h2>
@@ -56,8 +57,8 @@
 <footer class="footer">
   <br><br>
   <p><small>contact us</small></p>
-  <small><a href="mailto:kcooper11@student.cvtc.edu">kat cooper</a></small><br>
-  <small><a href="mailto:colliernw@gmail.com">nicholas collier</a></small>
+  <small><a href="mailto:kcooper11@student.cvtc.edu">Kat Cooper</a></small><br>
+  <small><a href="mailto:colliernw@gmail.com">Nicholas Collier</a></small>
 </footer>
 
 </html>
