--- a/public/supplies.html
+++ b/public/supplies.html
@@ -5,11 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  
   <title>Pets For Life</title>
+
+
 </head>
 
 <body id="supply">
-  <h1>Pets For Life</h1>
+  <img class="logoImg">
+  
+
   <div class="nav">
     <a href="index.html">home</a>
     <a href="pet.html">pets</a>
@@ -51,8 +56,8 @@
 <footer class="footer">
   <br><br>
   <p><small>contact us</small></p>
-  <small><a href="mailto:kcooper11@student.cvtc.edu">kat cooper</a></small><br>
-  <small><a href="mailto:colliernw@gmail.com">nicholas collier</a></small>
+  <small><a href="mailto:kcooper11@student.cvtc.edu">Kat Cooper</a></small><br>
+  <small><a href="mailto:colliernw@gmail.com">Nicholas Collier</a></small>
 </footer>
 
 </html>
