--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -43,9 +43,8 @@
 
 <footer class="footer">
   <br><br>
-  <p><small>contact us</small></p>
-  <small><a href="mailto:kcooper11@student.cvtc.edu">Kat Cooper</a></small><br>
-  <small><a href="mailto:colliernw@gmail.com">Nicholas Collier</a></small>
+  <p><small><a href="aboutUs.html">contact us</a></small></p>
+
 </footer>
 
 </html>
