--- a/public/petCare.html
+++ b/public/petCare.html
@@ -13,9 +13,9 @@
    <div class="nav">
     <a href="index.html">home</a>
     <a href="pet.html">pets</a>
-    <a href="petCare.html">pet care</a>
+    <a href="petCare.html">care</a>
     <a href="supplies.html">supplies</a>
-    <a href="aboutUs.html">about us</a> 
+    <a href="aboutUs.html">about</a> 
   </div>
  
 
@@ -56,9 +56,8 @@
 </body>
 <footer class="footer">
   <br><br>
-  <p><small>contact us</small></p>
-  <small><a href="mailto:kcooper11@student.cvtc.edu">Kat Cooper</a></small><br>
-  <small><a href="mailto:colliernw@gmail.com">Nicholas Collier</a></small>
+  <p><small><a href="aboutUs.html">contact us</a> </small></p>
+  
 </footer>
 
 </html>
