--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
   <div class="nav">
     <a href="index.html">home</a>
     <a href="pet.html">pets</a>
-    <a href="petCare.html">pet care</a>
+    <a href="petCare.html">care</a>
     <a href="supplies.html">supplies</a>
-    <a href="aboutUs.html">about us</a>
+    <a href="aboutUs.html">about</a>
     
   </div>
   <div class="main">
