[Finishes #184027468] update checklists

--- a/public/supplies.html
+++ b/public/supplies.html
@@ -40,12 +40,24 @@
     <option value="cat">Cat</option>
     <option value="dog">Dog</option>
     <option value="bird">Bird</option>
-    <option value="farm">Farm</option>
-    <option value="reptile">Reptile</option>
-    <option value="horse">Horse</option>
-    <option value="fish">Fish</option>
-    <option value="smallPet">Small Pets</option>
+    <option value="guineapig">Guinea Pig</option>
+    <option value="hamster">Hamster</option>
+    <option value="rat">Rat</option>
+    <option value="ferret">Ferret</option>
+    <option value="mouse">Mouse</option>
     <option value="rabbit">Rabbit</option>
+    <option value="fish">Fish</option>
+    <option value="turtle">Turtle</option>
+    <option value="snake">Snake</option>
+    <option value="lizard">Lizard</option>
+    <option value="beardeddragon">Bearded Dragon</option>
+    <option value="iguana">Iguana</option>
+    <option value="gecko">Gecko</option>
+    <option value="horse">Horse</option>
+    <option value="chicken">Chicken</option>
+    <option value="sheep">Sheep</option>
+    <option value="goat">Goat</option>
+    <option value="pig">Pig</option>
   </select>
 <button type="button" onclick="supplyLinks()" value="find">Find Supply</button>    </div>
 </form>
