updated all html css print button

--- a/public/index.html
+++ b/public/index.html
@@ -9,30 +9,33 @@
 </head>
 
 <body>
-  <img class="logoImg">
-  <div class="nav">
-    <a href="index.html">home</a>
-    <a href="pet.html">pets</a>
-    <a href="petCare.html">care</a>
-    <a href="supplies.html">supplies</a>
-    <a href="aboutUs.html">about</a>
+  <header>
+    <img class="headerimg" src="images/pfl.png">
+  </header>
+  <nav>
+    <ul>
+      <li><a href="index.html">home</a></li>
+      <li><a href="pet.html">pets</a></li>
+      <li><a href="petCare.html">care</a></li>
+      <li><a href="supplies.html">supplies</a></li>
+      <li><a href="aboutUs.html">about</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <h1>Welcome to Pets For Life</h1>
+    <img class="mainimg" src="images/stockimgdog.jpg">
     
-  </div>
-  <div class="main">
-    <img class="navimg" src="images/stockimgdog.jpg">
-    <h2>Welcome to Pets For Life</h2>
     <div id="featuredpet" class="featuredpet">
       <h2 class="featuredtitle">Featured Pet</h2>
       <div id="random"></div>
     </div>
 
-  </div>
+  </main>
   <script src="js/index.js"></script>
 </body>
 <footer class="footer">
-  <br><br>
-  <p><small><a href="aboutUs.html">contact us</a></small></p>
-  
+  <!-- <p><small><a href="aboutUs.html">contact us</a></small></p> -->
 </footer>
 
 </html>
