--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -10,18 +10,22 @@
 </head>
 
 <body>
-  <img class="logoImg" >
-  <div class="nav">
-    <a href="index.html">home</a>
-    <a href="pet.html">pets</a>
-    <a href="petCare.html">care</a>
-    <a href="supplies.html">supplies</a>
-    <a href="aboutUs.html">about</a>
-    
-  </div>
-  <div class="main">
-    <img class="navimg" src="images/stockimghorse.jpg">
-    <h2>Pets For Life</h2>
+  <header>
+    <img class="headerimg" src="images/pfl.png">
+  </header>
+  <nav>
+    <ul>
+      <li><a href="index.html">home</a></li>
+      <li><a href="pet.html">pets</a></li>
+      <li><a href="petCare.html">care</a></li>
+      <li><a href="supplies.html">supplies</a></li>
+      <li><a href="aboutUs.html">about</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <h1>About Us</h1>
+    <img class="mainimg" src="images/stockimghorse.jpg">
     <p>This site is to help animals find their forever home and help people find supplies and care for their new pet.</p>
     <p>For any questions, comments, or concerns, please fill out this form.</p>
 
@@ -38,13 +42,11 @@
     </form>
 
     <p id="confirm"></p>
-  </div>
+  </main>
 </body>
 
 <footer class="footer">
-  <br><br>
-  <p><small><a href="aboutUs.html">contact us</a></small></p>
-
+  <!-- <p><small><a href="aboutUs.html">contact us</a></small></p> -->
 </footer>
 
 </html>
