[Finishes #184027415] handle footer

--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,16 @@
 
   </main>
   <script src="js/index.js"></script>
+
+  <footer>
+    <small>
+      Copyright &#169; 2022 PetsForLife
+      <br>
+      <a href="aboutUs.html">contact us</a>
+    </small>
+  </footer>
 </body>
-<footer class="footer">
-  <!-- <p><small><a href="aboutUs.html">contact us</a></small></p> -->
-</footer>
+
+
 
 </html>
