--- a/public/pet.html
+++ b/public/pet.html
@@ -50,9 +50,14 @@
   </main>
   <script  src="js/search.js"></script>
 
+  <footer>
+    <small>
+      Copyright &#169; 2022 PetsForLife
+      <br>
+      <a href="aboutUs.html">contact us</a>
+    </small>
+  </footer>
 </body>
-<footer class="footer">
-  <!-- <p><small><a href="aboutUs.html">contact us</a></small></p> -->
-</footer>
+
 
 </html>
