--- a/public/petCare.html
+++ b/public/petCare.html
@@ -50,8 +50,12 @@
     </main>
   
 </body>
-<footer class="footer">
-  <!-- <p><small><a href="aboutUs.html">contact us</a> </small></p> -->
+<footer>
+  <small>
+    Copyright &#169; 2022 PetsForLife
+    <br>
+    <a href="aboutUs.html">contact us</a>
+  </small>
 </footer>
 
 </html>
