--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -43,10 +43,16 @@
 
     <p id="confirm"></p>
   </main>
+
+  <footer>
+    <small>
+      Copyright &#169; 2022 PetsForLife
+      <br>
+      <a href="aboutUs.html">contact us</a>
+    </small>
+  </footer>
 </body>
 
-<footer class="footer">
-  <!-- <p><small><a href="aboutUs.html">contact us</a></small></p> -->
-</footer>
+
 
 </html>
