--- a/public/supplies.html
+++ b/public/supplies.html
@@ -61,9 +61,14 @@
       <div id="output"></div>
 
   </main>
+  <footer>
+    <small>
+      Copyright &#169; 2022 PetsForLife
+      <br>
+      <a href="aboutUs.html">contact us</a>
+    </small>
+  </footer>
 </body>
-<footer class="footer">
-  <!-- <p><small><a href="aboutUs.html">contact us</a></small></p> -->
-</footer>
+
 
 </html>
