--- a/public/supplies.html
+++ b/public/supplies.html
@@ -30,8 +30,8 @@
 
       <form id="supplyForm">
         
-        <label for="animal">Animal</label>
-        <select id="animalType">
+        <!-- <label class="label" for="animal">Animal</label> -->
+        <select class="dropdown" id="animalType">
           <option value="cat">Cat</option>
           <option value="dog">Dog</option>
           <option value="bird">Bird</option>
@@ -55,7 +55,7 @@
           <option value="pig">Pig</option>
         </select>
 
-        <button type="button" onclick="supplyLinks()" value="find">Find Supply</button>    
+        <button class="submit" type="button" onclick="supplyLinks()" value="find">Find Supply</button>    
     
       </form>
       <div id="output"></div>
