--- a/public/petCare.html
+++ b/public/petCare.html
@@ -25,15 +25,15 @@
   </nav>
  
   <main>
-    <h1>Pet Care Information</h1>
+    <h1>Pet Care</h1>
     <img class="mainimg" src="images/stockimgpiggoat.jpg">
 
     <p>Please visit these links to answer all of your pet care questions.</p>
 
     <form id="petCareForm">
-      <div>
-        <label for="animal">Animal</label>
-        <select id="animalType">
+      
+        <!-- <label class="label" for="animal">Animal</label> -->
+        <select class="dropdown" id="animalType">
           <option value="cat">Cat</option>
           <option value="dog">Dog</option>
           <option value="bird">Bird</option>
@@ -43,7 +43,8 @@
           <option value="fish">Fish</option>
           <option value="smallPet">Small Pets</option>
         </select>
-      <button type="button" onclick="petCareLinks()" value="find">Find Pet Care</button>    </div>
+      <button class="submit" type="button" onclick="petCareLinks()" value="find">See Links</button>    
+    
       </form>
       <div id="output"></div>
 
