--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -29,16 +29,19 @@
     <p>This site is to help animals find their forever home and help people find supplies and care for their new pet.</p>
     <p>For any questions, comments, or concerns, please fill out this form.</p>
 
-    <form action="https://formsubmit.co/09940a211bac00f46de40dfa1d7889a7" method="post" >
+    
+
+    <form action="https://formsubmit.co/potatochipkat@gmail.com" method="POST">
       <label>First Name:</label>
-      <input required type="text" id="firstname" size="50"class="sendmsg"><br>
+      <input type="text" name="fname" required><br>
       <label>Last Name:</label>
-      <input required type="text" id="lastname" size="50"class="sendmsg"><br>
-      <label>Email Address:</label>
-      <input required type="email" id="email" size="50"class="sendmsg"><br>
-      <p>Enter your message here:</p>
-      <textarea required rows="4" cols="50" id="message"class="sendmsg"></textarea><br>
-      <input type="submit" class="submit" value="Send Message" id="sendmessage" onclick="sendMessage()">
+      <input type="text" name="lname" required><br>
+      <label>Email:</label>
+      <input type="email" name="email" required><br>
+      
+      <label>What's On Your Mind?</label>
+      <textarea rows="4" cols="20" name="textarea" required></textarea><br>
+      <button type="submit">Send</button>
     </form>
 
     <p id="confirm"></p>
