update supplies, contact form

--- a/public/petCare.html
+++ b/public/petCare.html
@@ -31,7 +31,7 @@
     <p>Please visit these links to answer all of your pet care questions.</p>
         
         <select class="dropdown" id="animalType" onchange="showLinks()">
-          <option value="selectanimal">select animal</option>
+          <option value="selectanimal">Select Animal</option>
           <option value="cat">Cat</option>
           <option value="dog">Dog</option>
           <option value="bird">Bird</option>
