--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -31,21 +31,21 @@
 
     
 
-    <form action="https://formsubmit.co/potatochipkat@gmail.com" method="POST">
+    <form action="https://formsubmit.co/58286d8413ea895ae4824c2ac6a1e1b5" method="POST">
       <!-- honeypot -->
       <input type="text" name="_honey" style="display: none;">
       <!-- disable captcha -->
       <input type="hidden" name="_captcha" value="false">
-      <label>First Name:</label>
+      <label>First Name:</label><br>
       <input type="text" name="fname" required><br>
-      <label>Last Name:</label>
+      <label>Last Name:</label><br>
       <input type="text" name="lname" required><br>
-      <label>Email:</label>
+      <label>Email:</label><br>
       <input type="email" name="email" required><br>
       
-      <label>What's On Your Mind?</label>
-      <textarea rows="4" cols="20" name="textarea" required></textarea><br>
-      <button type="submit">Send</button>
+      <label>What's On Your Mind?</label><br>
+      <textarea rows="4" cols="40" name="textarea" required></textarea><br>
+      <button type="submit" class="submit">Send</button>
     </form>
 
     <p id="confirm"></p>
