--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -36,6 +36,9 @@
       <input type="text" name="_honey" style="display: none;">
       <!-- disable captcha -->
       <input type="hidden" name="_captcha" value="false">
+      <!-- redirect to success.html -->
+      <input type="hidden" name="_next" value="https://pets-for-life.onrender.com/success.html">
+      
       <label>First Name:</label><br>
       <input type="text" name="fname" required><br>
       <label>Last Name:</label><br>
