--- a/public/success.html
+++ b/public/success.html
@@ -23,7 +23,11 @@
   </nav>
 
   <main>
-    
+    <h2>Thank You!</h2>
+    <p>We have recieved your message and will get back to you very soon.
+      Have a great day!
+        - PetsForLife Team
+    </p>
     
    
 
