--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   </nav>
 
   <main>
-    <h1>Welcome to <span>Pets For Life</span></h1>
+    <h1 class="index">Pets For Life</h1>
     <img class="mainimg" src="images/stockimgdog.jpg">
     
     <div id="featuredpet" class="featuredpet">
