add background image

--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
+  <section>
   <header>
-    <img class="headerimg" src="images/pfl.png">
-  </header>
+    <a href="index.html"><img class="headerimg" src="images/pfl.png" alt="pfl-logo"></a>  </header>
   <nav>
     <ul>
       <li><a href="index.html">home</a></li>
@@ -61,6 +61,7 @@
       <a href="aboutUs.html">contact us</a>
     </small>
   </footer>
+</section>
 </body>
 
 
