--- a/public/petCare.html
+++ b/public/petCare.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
+  <section>
   <header>
-    <img class="headerimg" src="images/pfl.png">
+    <a href="index.html"><img class="headerimg" src="images/pfl.png" alt="pfl-logo"></a>
   </header>
 
   <nav>
@@ -47,14 +48,15 @@
       <div id="output"></div>
 
     </main>
-  
+    <footer>
+      <small>
+        Copyright &#169; 2022 PetsForLife
+        <br>
+        <a href="aboutUs.html">contact us</a>
+      </small>
+    </footer>
+  </section>
 </body>
-<footer>
-  <small>
-    Copyright &#169; 2022 PetsForLife
-    <br>
-    <a href="aboutUs.html">contact us</a>
-  </small>
-</footer>
+
 
 </html>
