--- a/public/supplies.html
+++ b/public/supplies.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
+  <section>
   <header>
-    <img class="headerimg" src="images/pfl.png">
+    <a href="index.html"><img class="headerimg" src="images/pfl.png" alt="pfl-logo"></a>
   </header>
   <nav>
     <ul>
@@ -65,6 +66,7 @@
       <a href="aboutUs.html">contact us</a>
     </small>
   </footer>
+</section>
 </body>
 
 
