--- a/public/template.html
+++ b/public/template.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
+  <section>
   <header>
-    <img class="headerimg" src="images/pfl.png">
+    <a href="index.html"><img class="headerimg" src="images/pfl.png" alt="pfl-logo"></a>
   </header>
   <nav>
     <ul>
@@ -37,6 +38,7 @@
       <a href="aboutUs.html">contact us</a>
     </small>
   </footer>
+</section>
 </body>
 
 
